--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.1",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
