--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
     "express": "^4.18.2",
+    "ngx-socket-io": "^4.8.5",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
